Mise en place de la balise "meta description" dans le fichier HTML du projet.

--- a/star-wars-blog/public/index.html
+++ b/star-wars-blog/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Star Wars Encyclopedia"
-      content="Star Wars Encyclopedia"
+      name="description"
+      content="Découvrez Star Wars Encyclopedia, une plateforme immersive dédiée aux fans de Star Wars. Explorez un Wiki enrichi par une API, participez aux discussions sur le forum, créez un compte, échangez des likes et recevez des notifications par email. Accessible sur tous les appareils grâce à un design responsive. Rejoignez la communauté galactique dès maintenant !"
     />
     <link rel="apple-touch-icon" href="" />
     <!--
