Correction d'une balise meta pour Facebook.

--- a/star-wars-blog/public/index.html
+++ b/star-wars-blog/public/index.html
@@ -37,9 +37,11 @@
     </script>
 
     <!-- Balises OpenGraph -->
+    <meta property="og:image" content="https://www.star-wars-encyclopedia.com/Images/banner.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:title" content="Star Wars Encyclopedia" />
     <meta property="og:description" content="Découvrez et partagez vos connaissances de l'univers Star Wars. Explorez le wiki, discutez dans le forum, découvrez les films et les séries de la saga et faites l'acquisition de prodigieux artefacts appartenant à l’univers Star Wars." />
-    <meta property="og:image" content="https://www.star-wars-encyclopedia.com/Images/banner.jpg" />
     <meta property="og:url" content="https://www.star-wars-encyclopedia.com" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
